# ml-project-template

./: .gitattributes  PROJECT_TEMPLATE_README.md  README.md  cookiecutter.json
{{cookiecutter.project_slug}}/: .gitignore  .pre-commit-config.yaml  README.md  environment.yml  pyproject.toml  tasks.py
{{cookiecutter.project_slug}}/.github/workflows/: ci.yml
{{cookiecutter.project_slug}}/notebooks/: 01-eda-fe.ipynb  02-modelling.ipynb
{{cookiecutter.project_slug}}/src/{{cookiecutter.package_name}}/: config.py  data.py  evaluate.py  features.py  model.py
{{cookiecutter.project_slug}}/tests/: test_features.py
